--- a/style.css
+++ b/style.css
@@ -52,6 +52,12 @@ body {
 
 #header {
     /* Header */
+    /* Auto layout */
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 0px;
     width: 540px;
     height: 202px;
     /* Inside auto layout */
@@ -63,22 +69,20 @@ body {
 
 #logo {
     /* image or logo or something */
-    position: absolute;
-    width: 190px;
-    height: 190px;
-    right: 1px;
-    top: 0px;
+    width: 200px;
+    height: 200px;
     background: #FBD3BC;
     box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+    /* Inside auto layout */
+    flex: none;
+    order: 1;
+    flex-grow: 0;
 }
 
 #first-name {
     /* Ed Paradis */
-    position: absolute;
     width: 195px;
     height: 202px;
-    left: 0px;
-    top: 0px;
     font-family: 'Times New Roman';
     font-style: normal;
     font-weight: 400;
@@ -87,15 +91,16 @@ body {
     /* or 75% */
     color: #000000;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    /* Inside auto layout */
+    flex: none;
+    order: 0;
+    flex-grow: 0;
 }
 
 #last-name {
     /* Ed Paradis */
-    position: absolute;
     width: 195px;
     height: 202px;
-    left: 0px;
-    top: 0px;
     font-family: 'Times New Roman';
     font-style: normal;
     font-weight: 400;
@@ -104,6 +109,10 @@ body {
     /* or 100% */
     color: #000000;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    /* Inside auto layout */
+    flex: none;
+    order: 0;
+    flex-grow: 0;
 }
 
 #nav {
